--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   shimmer: ^3.0.0
   flutter_expandable_fab: ^2.5.2
   image_picker: ^1.2.0
+  dio: ^5.9.0
   # url_launcher: ^6.1.10 
   # url_launcher: ^6.3.2
 dev_dependencies:
