--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,16 @@ dependencies:
   flutter_expandable_fab: ^2.5.2
   image_picker: ^1.2.0
   dio: ^5.9.0
+  package_info_plus: ^4.0.0      
+  device_info_plus: ^10.0.0      
+  network_info_plus: ^5.0.0  
+  http: ^1.5.0
+  path_provider: ^2.1.5
+  pointycastle: ^4.0.0
+  video_player: ^2.10.0
+  chewie: ^1.7.5
+  just_audio: ^0.10.5
+  
   # url_launcher: ^6.1.10 
   # url_launcher: ^6.3.2
 dev_dependencies:
