--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,13 +27,10 @@ environment:
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
-
 dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   get: ^4.7.2
   flutter_screenutil: ^5.9.3
@@ -50,14 +47,13 @@ dependencies:
   device_info_plus: ^10.0.0      
   network_info_plus: ^5.0.0  
   http: ^1.5.0
-  path_provider: ^2.1.5
-  pointycastle: ^4.0.0
-  video_player: ^2.10.0
-  chewie: ^1.7.5
-  just_audio: ^0.10.5
-  
-  # url_launcher: ^6.1.10 
-  # url_launcher: ^6.3.2
+  path_provider: ^2.0.12
+  fernet: ^0.0.6
+  just_audio: ^0.10.0
+  video_player: ^2.5.0
+  chewie: ^1.5.0
+  flutter_cache_manager: ^3.3.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
